	  is not set, the driver will not configure the SPI mode correctly
	  (2013-8-5).
	* configs/sama5d3x-ek/src/sam_at25.c: Move AT25 initialization logic
	  out of sam_nsh.c and into a separate file where it can be better
	  shared (2013-8-5).
	* arch/arm/src/sama5/sam_hsmci.c, sam_hsmci.h, and chip.sam_hsmci.h:
	  Add register definitions and a driver for the (3) HSMCI memory card
	  interfaces provided by the SAMA5.  Leveraged from the SAM3/4 and
	  untested on initial commit (2013-8-5).
	* nuttx/configs/sama5d3x-ek/src/sam_hsmci.c and sam_nsh.c:  Add support
	  for the (2) SD card slots provided on the SAMA5D3x-EK boards.
	  Untested on initial commit (2013-8-5).
	* arch/arm/src/sama5 and nuttx/configs/sama5d3x-ek:  Massive renaming
	  to get consistent once and for in the usage of PIO vs GPIO.  Other
	  platforms use the term GPIO more, but Atmel prefers PIO.  I prefer
	  consistency.  Also fixed CONFIG_PIO vs CONFIG_SAMA5_PIO and renamed
	  files sam_gpio.* to sam_pio.* (2013-8-6).
	* arch/arm/src/sama5/sam_pioirq.c:  Add support for SAMA5 PIO interrupts
	  (2013-8-6).
	* configs/sama5d3x-ek/src/sam_hsmci.c:  Add support for SD slot card
	  detection PIO interrupts (2013-8-6).
	* arch/arm/src/sam34/sam_hsmci.c and sama5/sam_hsmci.c:  Fix handling
	  of some masked status conditions that can cause false-alarm errors
	  (2013-8-6).
	* arch/arm/src/sama5/sam_dmac.c and sam34/sam34_dmac.c:  For SAMA5,
	  correct some bad register address and some bad assertions that caused
	  false alarms.  These latter were backported to the SAM34 DMAC driver
	  as well (2013-8-6).
	* arch/arm/src/sama5/sam_dmac.c and sam34/sam34_dmac.c: Correct
	  some parameters reversed in function call (2013-8-6).
	* arch/arm/src/sama5/sam_spi.c:  The SAMA5 SPI driver now supports
	  DMA transfers (2013-8-9).
	* arch/arm/src/sama5/sam_dmac.c:  Finally after many bugfixes (the
	  last being caching issues), the SAMA5 DMA support has been
	  verified (with SPI) (2013-8-9).
